# DiagnosticModel

./: .env.example  .gitignore  History.md  Makefile  PROJECT_STRUCTURE.md  Promt.md  README.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  patch.diff  pyproject.toml  requirements-dev.txt  requirements.txt  sitecustomize.py  test_db.sqlite
.github/workflows/: ci-cd.yml  ci.yml  security-scan.yml
configs/grafana/: grafana.ini
configs/grafana/datasources/: datasources.yml
configs/nginx/: health.conf  nginx.conf
configs/postgres/: postgresql.conf
configs/prometheus/: prometheus.yml
configs/prometheus/rules/: diagmod_alerts.yml
configs/redis/: redis.conf
configs/streamlit/: config.toml
docker/api/: Dockerfile
docker/dashboard/: Dockerfile
docker/worker/: Dockerfile
docs/: monitoring_guide.md
scripts/: backup.sh  extract_features.py  forecast_rms.py  health-check.sh  init-system.ps1  install-simple.ps1  load_csv_data.py  run-api.ps1  run-dashboard.ps1  run-worker.ps1  run_dashboard.sh  setup.ps1  setup.sh  status.ps1  train_models.py  worker_cli.py  worker_metrics_server.py
sql/procedures/: 001_core_procedures.sql
sql/schema/: 001_initial.sql  002_indexes.sql  003_security_audit.sql
sql/seed/: 001_initial_data.sql
sql/views/: 001_analysis_views.sql
src/: __init__.py
src/api/: main.py
src/api/middleware/: audit_middleware.py  auth.py  metrics.py  security.py
src/api/routes/: __init__.py  admin_security.py  anomalies.py  auth.py  monitoring.py  signals.py  upload.py
src/api/schemas/: __init__.py  responses.py
src/config/: settings.py
src/dashboard/: app.py  healthz.py  main.py  utils.py
src/dashboard/components/: __init__.py  ui_components.py
src/dashboard/pages/: __init__.py  admin.py
src/data_processing/: csv_loader.py  data_validator.py  feature_extraction.py
src/database/: connection.py  models.py
src/ml/: forecasting.py  train.py
src/utils/: logger.py  metrics.py  serialization.py
src/worker/: __init__.py  config.py  core_tasks.py  monitoring.py  specialized_tasks.py  tasks.py  tasks_logic.py
src/worker/tasks/: __init__.py  specialized_tasks.py
tests/unit/: test_api.py  test_csv_loader.py  test_csv_loader_metrics.py  test_data_validator.py  test_db_connection.py  test_feature_extraction.py  test_forecasting.py  test_forecasting_mvp.py  test_metrics.py  test_security.py  test_serialization.py  test_train.py  test_upload.py  test_worker_tasks.py
